--- a/src/component/Layout/DefaultLayout/Header/Header.module.scss
+++ b/src/component/Layout/DefaultLayout/Header/Header.module.scss
@@ -4,7 +4,9 @@
     color: #111827;
     border-bottom: 3px solid #f3f3f3;
     position: relative;
-    z-index: 1;
+    z-index: 11;
+    // position: fixed;
+    background-color: #ffffff;
     .nav-container{
         display: flex;
         justify-content: space-between;
@@ -35,11 +37,11 @@
             list-style-type: none;
             margin: 0 35px;
             cursor: pointer;
-            :hover{
-                .tour-down-container{
-                    display: block;
-                }
-            }
+            // :hover{
+            //     .tour-down-container{
+            //         display: block;
+            //     }
+            // }
         }
         li{
             display: inline-block;
@@ -50,50 +52,6 @@
                 font-weight: 600;
                 text-decoration: none;
                 color: #111827;
-            }
-        }
-    }
-    .tour-down-container{
-        width: 840px;
-        height: 376px;
-        box-shadow: rgb(0 0 0 / 10%) 0px 13px 13px 13px;
-        animation: infinite;
-        animation: nav-down-ani ease 0.67s;
-        transform-origin: 20% top;
-        padding: 24px 12px;
-        font-size: 14px;
-        color: #111827;
-        position: absolute;
-        z-index: 2;
-        left: 287px;
-        top: 65px;
-        border-radius: 15px!important;
-        display: none;
-        .tour-down-container-main{
-            display: flex;
-            justify-content: space-between;
-        }
-        .list-tour-container{
-            width: 144px;
-            .nav-down-img{
-                width: 144px;
-                height: 96px;
-                border-radius: 10px;
-                object-fit: cover;
-            }
-            .list-nav{
-                margin:0!important;
-                width: 144px;
-                margin-right: 20px;
-                text-align: left;
-                .header-list-nav{
-                    font-weight: 700;
-                    margin-top: 8px;
-                }
-                li{
-                    width: 144px;
-                    padding:0!important;
-                }
             }
         }
     }
@@ -118,7 +76,10 @@
                 height: 22px;
                 cursor: pointer;
             }
-        }    
+        }  
+        .login-btn-link{
+            text-decoration: none;
+        }  
         .login-btn{
             display: flex;
             justify-content: center;
@@ -126,10 +87,13 @@
             background-color: #4f46e5;
             border-radius: 9999px;
             width: 110px;
+            font-size: 15px;
             height: 48px;
             color: #ffffff;
             text-decoration: none;
             font-weight: 600;
+            border: none;
+            cursor: pointer;
         }
         .login-btn:hover{
             opacity: 0.95;
@@ -145,5 +109,57 @@
     to{
         opacity: 1;
         transform: scale(1);
+    }
+}
+.wrapper-container {
+    background-color: #ffffff;
+    width: 840px;
+    box-shadow: rgb(0 0 0 / 10%) 0px 13px 13px 13px;
+    animation: infinite;
+    animation: nav-down-ani ease 0.67s;
+    transform-origin: 20% top;
+    border-radius: 15px!important;
+    z-index: 100;
+}
+.tour-down-container{
+    width: 100%;
+    height: 326px;
+    padding: 24px 12px;
+    font-size: 14px;
+    color: #111827;
+    // position: absolute;
+    // z-index: 2;
+    // left: 287px;
+    // top: 65px;
+    // display: none;
+    .tour-down-container-main{
+        display: flex;
+        justify-content: space-between;
+    }
+    .list-tour-container{
+        width: 144px;
+        .nav-down-img{
+            width: 144px;
+            height: 96px;
+            border-radius: 10px;
+            object-fit: cover;
+        }
+        .list-nav{
+            margin:0!important;
+            width: 144px;
+            margin-right: 20px;
+            text-align: left;
+            list-style-type: none;
+            .header-list-nav{
+                font-weight: 700;
+                margin-top: 8px;
+            }
+            li{
+                width: 144px;
+                padding:0!important;
+                margin-bottom: 10px;
+                font-size: 14px;
+            }
+        }
     }
 }
