--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,4 +1,124 @@
 .Home-main{
-    width: 100%;
-    height: 650px;
+    height: 100%;
+    // display: flex;
+    // justify-content: center;
+}
+.Home-container{
+    width: 1280px;
+    height: 100%;
+    padding: 0 16px;
+    margin: 0 auto;
+}
+.silde-container{
+    width: 1248px;
+    height: 765px;
+    padding: 64px 0;
+    display: flex;
+    justify-content: center;
+}
+.slide-content{
+    width: 624px;
+    margin: auto 0px;
+    h1{
+        font-size: 72px;
+        font-weight: 600;
+        line-height: 82.08px;
+    }
+    p{
+        margin-top: 40px;
+    }
+}
+.slide-img{
+    width: 704px;
+    display: flex;
+    justify-content: space-between;
+    .slide-img-left{
+        display: flex;
+        flex-direction: column;
+        height: 635px;
+        justify-content: space-between;
+    }
+    .img-left{
+        width: 310px;
+        height: 310px;
+        object-fit: cover;
+    }
+    .img-right{
+        width: 340px;
+        height: 635px;
+        object-fit: cover;
+    }
+}
+.search-container{
+    margin: 30px 0 120px;
+
+}
+.search-body{
+    --tw-ring-offset-shadow: 0 0 #0000;
+    --tw-ring-shadow: 0 0 #fff;
+    --tw-shadow: 0 20px 25px -5px rgba(0,0,0,.1),0 8px 10px -6px rgba(0,0,0,.1);
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1), var(--tw-shadow);
+    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000), var(--tw-shadow);
+    border-radius: 9999px;
+    background-color: rgba(255,255,255,1);
+    height: 98px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border:1px solid #ddd;
+    height:110px;
+}
+.input-container{
+    display: flex;
+    align-items: center;
+    padding: 24px 32px;
+    width: 380px;
+
+}
+.input-location-icon{
+
+}
+.input-location{
+    margin-left: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    input{
+        width: 390px;
+        height: 28px;
+        background-color: transparent;
+        border: none;
+        outline: none;
+        font-size: 18px;
+    }
+    input::placeholder{
+        color: #111827;
+        font-size: 16px;
+        font-weight: 600;
+    }
+}
+.circle-btn{
+    background-color: #4f46e5;
+    width: 74px;
+    height: 74px;
+    border-radius: 9999px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    button{
+        background-color: transparent;
+        outline: none;
+        border: none;
+        cursor: pointer;
+    }
+    margin-right: 10px;
+}
+.circle-btn:hover{
+    background-color: #4338ca;
+}
+.icon-circle-btn{
+    width: 24px;
+    height: 24px;
+    color:#fff
 }
