Location , Why choose

--- a/src/component/Layout/DefaultLayout/Header/Header.module.scss
+++ b/src/component/Layout/DefaultLayout/Header/Header.module.scss
@@ -11,7 +11,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 1280px;
+        max-width: 1280px;
         height: 100%;
         margin: 0 auto;
         padding: 20px 16px;
