--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -4,13 +4,13 @@
     // justify-content: center;
 }
 .Home-container{
-    width: 1280px;
+    max-width: 1280px;
     height: 100%;
     padding: 0 16px;
     margin: 0 auto;
 }
 .silde-container{
-    width: 1248px;
+    width: 100%;
     height: 765px;
     padding: 64px 0;
     display: flex;
@@ -118,4 +118,42 @@
     width: 24px;
     height: 24px;
     color:#fff
+}
+.location-container{
+    margin-top: 48px;
+}
+.location-heading-container{
+    margin-bottom: 48px;
+    h2{
+        font-size: 38px;
+        font-weight: 700;
+    }
+    span{
+        font-size: 18px;
+    }
+}
+.location-list-container{
+    width: 100%;
+    justify-content: space-between;
+    display: flex;
+}
+.why-choose-container{
+    display: flex;
+}
+.why-choose-img{
+    object-fit: cover;
+    -webkit-mask-image: url(../../component/assets/images/image/mask-image-1.png);
+    -webkit-mask-repeat: no-repeat;
+    width: 650px;
+    height: 650px;
+    img{
+        width: 100%;
+        height: 100%;
+    }
+}
+.why-choose-content-container{
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 55px;
 }
