--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -177,11 +177,22 @@
     padding: 12px 24px;
     border-radius: 9999px;
     border: none;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 15px;
-    background-color: #4f46e5;
-    color: #ffffff;
+    // background-color: #4f46e5;
+    background-color: #f3f4f6;
+    color: #6b7280;
     cursor: pointer;
+}
+.btn-location-product.active{
+    background-color: #4f46e5;
+    color: #f0fdfa;
+}
+.btn-location-product.active:hover{
+    color: #f0fdfa;
+}
+.btn-location-product:hover{
+    color: #111827;
 }
 .btn-location-product-all-container{
     .btn-location-product-all{
