--- a/src/pages/Home/Product/Product.module.scss
+++ b/src/pages/Home/Product/Product.module.scss
@@ -7,6 +7,7 @@
 .product-img{
     width: 100%;
     height: 214px;
+    position: relative;
     img{
         width: 100%;
         height: 100%;
@@ -14,6 +15,23 @@
         border-top-left-radius: 16px;
         border-top-right-radius: 16px;
     }
+}
+.favourite-container{
+    width: 32px;
+    height: 32px;
+    background-color: #0000004D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 9999px;
+    color: #ffffff;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+.favourite-container.active{
+    color:red
 }
 .product-content{
     display: flex;
