--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -4,7 +4,7 @@
     // justify-content: center;
 }
 .Home-container{
-    width: 1280px;
+    max-width: 1280px;
     height: 100%;
     padding: 0 16px;
     margin: 0 auto;
@@ -161,9 +161,6 @@
     display: flex;
     justify-content: space-between;
 }
-.btn-location-product-list{
-
-}
 .ul-location-product{
     list-style-type: none;
 }
@@ -213,5 +210,5 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    height: 820px;
+    height: 100%;
 }
