--- a/src/pages/Home/ProductDiscount/ProductDiscount.module.scss
+++ b/src/pages/Home/ProductDiscount/ProductDiscount.module.scss
@@ -1,24 +1,28 @@
 .product-box{
-    width: 278px;
-    height: 393px;
+    width: 560px;
+    height: 256px;
     background-color: #ffffff;
     border-radius: 16px;
     margin-top: 20px;
+    display: flex;
     cursor: pointer;
 }
 .product-box:hover{
     box-shadow: 0 20px 25px -5px rgba(0,0,0,.1),0 8px 10px -6px rgba(0,0,0,.1);;
 }
 .product-img{
-    width: 100%;
-    height: 214px;
+    // width: 100%;
+    // height: 100%;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     img{
-        width: 100%;
-        height: 100%;
+        width: 232px;
+        height: 232px;
         object-fit: cover;
-        border-top-left-radius: 16px;
-        border-top-right-radius: 16px;
+        border-radius: 16px;
+        margin-left: 14px;
     }
 }
 .favourite-container{
@@ -31,7 +35,7 @@
     border-radius: 9999px;
     color: #ffffff;
     position: absolute;
-    top: 10px;
+    top: 20px;
     right: 10px;
     cursor: pointer;
 }
@@ -44,6 +48,7 @@
     justify-content: center;
     width: 100%;
     padding: 10px 20px;
+    position: relative;
 }
 .number-seat{
     font-size: 14px;
@@ -75,6 +80,21 @@
 .price-tour-text{
     color: #111827;
     font-weight: 500;
+}
+.discount-container{
+    width: 89px;
+    height: 20px;
+    position: absolute;
+    border-radius: 9999px;
+    background-color: #f97316;
+    top: 22px;
+    left: 22px;
+    font-size: 11px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fef2f2;
+    font-weight: 600;
 }
 .rating-star{
     color: #f97316;
